add variables and the 2 first constraints

--- a/src/Project.ipynb
+++ b/src/Project.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Import of files needed for the project\n",
     "\n",
-    "import parser  # file containing the function to parse the data files and create a Data object\n",
+    "import parse  # file containing the function to parse the data files and create a Data object\n",
     "import problem as pb # file containing the data structures to store the data of the problem and a solution to a problem (class Data, BalanceTriple, Solution)\n",
     "import checker # file containing the functions to check if a given Solution object is feasible according to a Data object and if its cost is correclty computed\n",
     "import mip\n",
@@ -145,7 +145,7 @@
     "    print(\"Received instance files \", instanceFilename, \" and \", assignmentFilename)\n",
     "\n",
     "    # reading the data\n",
-    "    data = parser.parseFiles(instanceFilename, assignmentFilename)\n",
+    "    data = parse.parseFiles(instanceFilename, assignmentFilename)\n",
     "\n",
     "    if verbose:\n",
     "        pb.printData(data)\n",
@@ -207,7 +207,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "f4b81ad977e32084a723926dc7b96bfca4a43116f7cda30b4c19f258a6a3a12c"
+    "hash": "08594e447b8f77d2dbb3613c0ebaab769d1f962b3afde2403efa6280248428f7"
    }
   }
  },
